# douyin-xiaohongshu-data-monitor

./: .env  .env.example  .gitignore  PROGRESS.md  PROGRESS_2026-04-19_0652.md  PROGRESS_2026-04-19_1107.md  PROGRESS_2026-04-19_1413.md  PROGRESS_2026-04-19_1516.md  PROGRESS_2026-04-19_1618.md  PROGRESS_2026-04-19_1722.md  PROGRESS_2026-04-19_1823.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20260402_0001_initial_schema.py  20260402_0002_douyin_live_core_tables.py  20260402_0003_xiaohongshu_core_tables.py
data/samples/: douyin_live_comment_sample.json  douyin_live_status_sample.json
deploy/docker/: Dockerfile
deploy/ubuntu/: DEPLOY.md  bootstrap_server.sh  install_dependencies.sh
docs/: API说明.md  DEPLOY_REPORT.md  EXECUTION_REPORT.md  开发文档.md  抖音直播联调笔记.md  运行说明.md  进展报告-2026-04-19-08h56m.md  进度报告_20260419_0130.md
scripts/: analyze_douyin_trace.ps1  export_douyin_storage_state.ps1  extract_douyin_frontier_ws.ps1  inspect_douyin_frontier_frames.ps1  inspect_douyin_login_state.ps1  probe_douyin_live_room.ps1  probe_douyin_signed_api.ps1  scheduled_report_cycle.sh  trace_douyin_live_requests.ps1  trace_douyin_page_runtime.ps1
src/: main.py
src/app/: main.py
src/app/api/: deps.py
src/app/browser/: __init__.py  browser_sidecar.py  cdp_websocket_trace.py  login_manager.py
src/app/cli/: __init__.py  analyze_douyin_trace.py  browser_sidecar.py  decode_websocket.py  export_douyin_storage_state.py  extract_douyin_frontier_ws.py  generate_scheduled_reports.py  import_douyin_trace_comments.py  (+6 more)
(+71 files in other folders)
